[gd_scene format=3 uid="uid://cpak3r3swjbrc"]

[ext_resource type="Script" path="res://ui/death_overlay.gd" id="1_script"]

[node name="DeathOverlay" type="CanvasLayer"]
layer = 100
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.05, 0.05, 0.9)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "You were eliminated"
horizontal_alignment = 1

[node name="RankLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Rank: #1 / 4"
horizontal_alignment = 1

[node name="MenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Return to Menu"
